ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-02-17 Daniel Andreca
	- GUI:
		* Fixed #1673: If admin edits personal data of users, the admin template is loaded
		* Fixed #1675: Bug in admin/server_status.php
	- LANGUAGES:
		* Updated German
	- CONFIGS:
		* Fixed #1674: proftpd: root_domain.conf

2009-02-16 Benedikt Heintel
	- GUI:
		* Small fixes
	- LANGUAGES:
		* Updated Italian

2009-02-16 Daniel Andreca
	- GUI:
		* Fixed small typos introduced in r1502
		* Fixed Language uninstall is always the previous uninstalled
		* Add target _blank to phpmyadmin autologin
	- ENGINE:
		* Fixed #1672: Wrong VHCS Version in Updatescript

2009-02-16 Thomas Häber
	- GUI:
		* fixed uninitialized variable bugs in orderpanel
		* fixed missing replacement of some template variables
		* some fixes in hardcoded HTML
	- THEMES:
		* fixed some HTML/JS issues + typos

2009-02-15 Daniel Andreca
	- GUI:
		* Fixed #1665: Form and td/table tags are mixed-up the wrong way in admin/reseller_edit.tpl
		* Fixed #1664: ServerStatus running SSHD shows DOWN
		* Fixed #1669: File Conf /etc/httpd/vhosts/01_awstats.conf for apache_awstats in fedora core 10

2009-02-15 Benedikt Heintel
	- GUI:
		* Fixed #1662: change "mail" to "SMTP" in statistics
	- LANGUAGES:
		* Updated all language files

2009-02-14 Daniel Andreca
	- GUI:
		* Alias subdomains are not rebuilded on domain property change
		* Hosting plan not readed when a new user is added
	- SETUP:
		* Updated update script

2009-02-14 Thomas Häber
	- THEMES:
		* fixes for more valid HTML (ID="..."->id="..."; css-/js-meta-tags for HTML attributes onload="javscript:.." and style="...", CSS-Background-fix)

2009-02-13 Thomas Häber
	- GUI:
		* code cleanup / coding style (PHP + included SQL)
		* optimized a lot of control structures (e.g. replaced some slow and hugh loops with internal php functions, or replaced hugh if-else structures with short ?: structure)
		* some fixes (e.g. for more valid HTML output)
		* fix typos in PHP comments